Update link js :+1:

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Right part : Image (only on large devices) -->
       <section id="section--image"></section>
    </main>
-   <script src="/assets/scripts/index.js"></script>
+   <script src="assets/scripts/index.js"></script>
 </body>
 
 </html>
