--- a/pratique.html
+++ b/pratique.html
@@ -86,7 +86,7 @@
                   </a>
                </div>
                <div class="card">
-                  <img src="/assets/images/card-image.svg" alt="Image de présentation 90°">
+                  <img src="assets/images/card-image.svg" alt="Image de présentation 90°">
                   <div>
                      <h4>Confort</h4>
                      <p>Consectetur nullam nunc nibh quis vitae diam</p>
@@ -114,7 +114,7 @@
                <div class="modal--context">
                   <!-- First description -->
                   <div id="first-content">
-                     <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                     <img src="assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
                      <div class="modale--content">
                         <h4>Titre de la section</h4>
                         <p>Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed dignissim
@@ -128,7 +128,7 @@
                   <hr>
                   <!-- Second description -->
                   <div id="second-content">
-                     <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                     <img src="assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
                      <div class="modale--content">
                         <h4>Titre de la section</h4>
                         <p>Porta felis non viverra libero. Amet integer egestas egestas sit feugiat sed dignissim
@@ -148,7 +148,7 @@
          </div>
       </section>
    </main>
-   <script src="/assets/scripts/pratique.js" defer></script>
+   <script src="assets/scripts/pratique.js" defer></script>
 </body>
 
 </html>
