--- a/resultat.html
+++ b/resultat.html
@@ -75,7 +75,7 @@
                <div class="block">
                   <div class="vtmn-card">
                      <div class="vtmn-card_image">
-                        <img src="/assets/images/hauteur-selle.svg" alt="Hauteur de selle">
+                        <img src="assets/images/hauteur-selle.svg" alt="Hauteur de selle">
                      </div>
                      <div class="vtmn-card_content">
                         <div class="card--content_flex">
@@ -93,7 +93,7 @@
                <div class="block">
                   <div class="vtmn-card">
                      <div class="vtmn-card_image">
-                        <img src="/assets/images/recul-selle.svg" alt="Recul de selle">
+                        <img src="assets/images/recul-selle.svg" alt="Recul de selle">
                      </div>
                      <div class="vtmn-card_content">
                         <div class="card--content_flex">
@@ -111,7 +111,7 @@
                <div class="block">
                   <div class="vtmn-card">
                      <div class="vtmn-card_image">
-                        <img src="/assets/images/drop.svg" alt="Drop">
+                        <img src="assets/images/drop.svg" alt="Drop">
                      </div>
                      <div class="vtmn-card_content">
                         <div class="card--content_flex">
@@ -129,7 +129,7 @@
                <div class="block">
                   <div class="vtmn-card">
                      <div class="vtmn-card_image">
-                        <img src="/assets/images/selle-guidon.svg" alt="Selle / Guidon">
+                        <img src="assets/images/selle-guidon.svg" alt="Selle / Guidon">
                      </div>
                      <div class="vtmn-card_content">
                         <div class="card--content_flex">
@@ -154,7 +154,7 @@
       <!-- Right part : Image (only on large devices) -->
       <section id="section--image--resultat"></section>
    </main>
-   <script src="/assets/scripts/index.js" defer></script>
+   <script src="assets/scripts/index.js" defer></script>
 </body>
 
 </html>
