--- a/resume.html
+++ b/resume.html
@@ -123,7 +123,7 @@
                <i class="fa-solid fa-xmark fa-xl"></i>
                <h3>Comment mesurer ?</h3>
                <div class="modal--context">
-                  <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                  <img src="assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
                   <div class="modale--content">
                      <h4>Entrejambe</h4>
                      <p><i class="fa-solid fa-ruler"></i><span class="text__underline">Matériel nécessaire :</span> un
@@ -147,7 +147,7 @@
          </div>
       </section>
    </main>
-   <script src="/assets/scripts/index.js" defer></script>
+   <script src="assets/scripts/index.js" defer></script>
 </body>
 
 </html>
