--- a/morphologie.html
+++ b/morphologie.html
@@ -180,7 +180,7 @@
                <i class="material-icons btnClose">close</i>
                <h3>Comment mesurer ?</h3>
                <div class="modal--context">
-                  <img src="/assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
+                  <img src="assets/images/image-modal.svg" alt="Image d'exemple pour la modal">
                   <div class="modale--content">
                      <h4>Entrejambe</h4>
                      <p>
@@ -207,7 +207,7 @@
          </div>
       </section>
    </main>
-   <script src="/assets/scripts/index.js" defer></script>
+   <script src="assets/scripts/index.js" defer></script>
 </body>
 
 </html>
