--- a/morphologie.html
+++ b/morphologie.html
@@ -85,7 +85,7 @@
                         </select>
                      </div>
                   </div>
-                  <a href="#">
+                  <a href="#" class="modalEntrejambe">
                      <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
@@ -110,7 +110,7 @@
                         </select>
                      </div>
                   </div>
-                  <a href="#" id="modalEntrejambe">
+                  <a href="#" class="modalEntrejambe">
                      <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
@@ -132,7 +132,7 @@
                         </select>
                      </div>
                   </div>
-                  <a href="#">
+                  <a href="#" class="modalEntrejambe">
                      <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
@@ -154,7 +154,7 @@
                         </select>
                      </div>
                   </div>
-                  <a href="#">
+                  <a href="#" class="modalEntrejambe">
                      <i class="material-symbols-outlined">info</i>
                      <p>Comment mesurer ?</p>
                   </a>
