--- a/pratique.html
+++ b/pratique.html
@@ -77,10 +77,10 @@
                </div>
             </div>
             <!-- Cards informations -->
-            <div class="card--container">
+            <div class="card--container" id="confort">
                <div class="card--desc">
                   <h4>Votre utilisation</h4>
-                  <a href="#" id="more-information--btn">
+                  <a href="#" class="more-information--btn">
                      <i class="material-symbols-outlined">info</i>
                      <p>En savoir plus</p>
                   </a>
@@ -89,6 +89,23 @@
                   <img src="assets/images/card-image.svg" alt="Image de présentation 90°">
                   <div>
                      <h4>Confort</h4>
+                     <p>Consectetur nullam nunc nibh quis vitae diam</p>
+                  </div>
+               </div>
+            </div>
+            <!-- Cards informations -->
+            <div class="card--container" id="perf">
+               <div class="card--desc">
+                  <h4></h4>
+                  <a href="#" class="more-information--btn">
+                     <i class="material-symbols-outlined">info</i>
+                     <p>En savoir plus</p>
+                  </a>
+               </div>
+               <div class="card">
+                  <img src="assets/images/card-image-perf.svg" alt="Image de présentation 90°">
+                  <div>
+                     <h4>Performance</h4>
                      <p>Consectetur nullam nunc nibh quis vitae diam</p>
                   </div>
                </div>
@@ -148,7 +165,7 @@
          </div>
       </section>
    </main>
-   <script src="assets/scripts/pratique.js" defer></script>
+   <script src="assets/scripts/pratique.js"></script>
 </body>
 
 </html>
