--- a/resultat.html
+++ b/resultat.html
@@ -67,9 +67,9 @@
                </div>
             </div>
          </div>
-         <div id="form" style="text-align: center; height: 55vh; padding: 1rem 1.8rem;">
-            <h1>Résultat</h1>
-            <h2>Retrouvez ci-dessous votre configuration 100% personnalisée !</h2>
+         <div id="form" style="height: 55vh; padding: 1rem 0.8rem;">
+            <h1 class="text-center">Résultat</h1>
+            <h2 class="text-center">Retrouvez ci-dessous votre configuration 100% personnalisée !</h2>
             <div class="resultat--block">
                <!-- Card : Hauteur de selle -->
                <div class="block">
