--- a/pratique.html
+++ b/pratique.html
@@ -69,7 +69,8 @@
                <div class="vtmn-select_container">
                   <label for="velo">Type de vélo</label>
                   <select name="velo" id="velo" autocomplete="on">
-                     <option value="chemin" selected>Vélo Tout Chemin</option>
+                     <option value="" disabled selected>Placeholder</option>
+                     <option value="chemin">Vélo Tout Chemin</option>
                      <option value="terrain">Vélo Tout Terrain</option>
                      <option value="gravel">Vélo Gravel</option>
                      <option value="route">Vélo Route</option>
